# Fake-News-Detection-Responsible-AI-Classification-System

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
data/sample/: news_sample.csv
scripts/: train.py
src/fake_news/: __init__.py  config.py  data.py  evaluation.py  insights.py  model.py  preprocessing.py
tests/: test_pipeline.py
